# signal-bot

./: .dockerignore  .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml  package-lock.json
.claude/hooks/: setup-worktree.sh
bot/: .env.example  .gitignore  Dockerfile  biome.json  package-lock.json  package.json
bot/src/: azureOpenAI.ts  claudeClient.ts  config.ts  contextBuilder.ts  db.ts  dossierMcpServer.ts  githubMcpServer.ts  groupProcessingQueue.ts  index.ts  lifecycle.ts  logger.ts  mcpServerBase.ts  memoryConsolidator.ts  memoryExtractor.ts  mentionDetector.ts  messageDeduplicator.ts  messageHandler.ts  messageHistoryMcpServer.ts  messageIngestion.ts  notifications.ts  personaMcpServer.ts  pollingBackoff.ts  recurringReminderExecutor.ts  reminderMcpServer.ts  reminderScheduler.ts  signalClient.ts  signalMcpServer.ts  sourceCodeMcpServer.ts  spawnLimiter.ts  storage.ts  types.ts  typingIndicator.ts  weatherMcpServer.ts
bot/tests/: azureOpenAI.test.ts  claudeClient.test.ts  config.test.ts  contextBuilder.test.ts  darkFactoryMcpServer.test.ts  db.checkpoint.test.ts  db.test.ts  dossierMcpServer.test.ts  githubMcpServer.test.ts  groupProcessingQueue.test.ts  (+39 more)
dashboard/: README.md  package-lock.json  package.json  tsconfig.json
docs/: bot-testing-report.md  dashboard-testing-report-2.md  dashboard-testing-report.md  deployment.md  manual-testing-report.md  setup.md  web-app-tools-qa-report.md
scripts/: deploy-nuc.sh  nuc-health.sh
signal-cli/: Dockerfile
transcription/: Cargo.toml
transcription/src/: audio.rs  main.rs  transcribe.rs
(+252 files in other folders)
