[package]
name = "signal-bot-transcription"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda"]

[dependencies]
whisper-rs = "0.15"
symphonia = { version = "0.5", features = ["aac", "isomp4", "ogg", "vorbis", "mp3", "wav", "pcm"] }
rubato = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
